# swc-transform-imports-extend

./: .gitignore  Cargo.toml  README.md  package.json  swc_plugin_transform_imports_extend.wasm  swc_transform_imports_extend.wasm
src/: lib.rs
transform/: Cargo.toml
transform/src/: lib.rs
transform/tests/: fixture.rs
transform/tests/fixture/preset/: input.js  output.js
transform/tests/fixture/style/: input.js  output.js
