cargo-features = ["edition2024"]

[package]
authors = ["hahazexia"]
description = "SWC plugin for https://www.npmjs.com/package/babel-plugin-transform-imports"
edition = "2024"
license = "Apache-2.0"
name = "swc_plugin_transform_imports_extend"
publish = false
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modularize_imports = { path = "./transform" }
serde_json = "1.0.79"
swc_common = { version = "0.33.19", features = ["concurrent"] }
swc_core = { version = "0.90.22", features = ["ecma_plugin_transform"] }
swc_ecma_ast = "0.112.5"
swc_ecma_utils = "0.127.12"
swc_ecma_visit = "0.98.6"
swc_plugin_macro = "0.9.16"
tracing = { version = "0.1.37", features = ["release_max_level_off"] }
