[package]

description = "SWC plugin for https://www.npmjs.com/package/babel-plugin-transform-imports"


authors      = ["hahazexia"]
edition      = "2021"
license      = "Apache-2.0"
name         = "swc_transform_imports_extend"
publish      = false
rust-version = "1.70"
version      = "0.19.4"


[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
modularize_imports = { path = "./transform" }
serde_json         = "1.0.117"
swc_common         = { version = "5.0.0", features = ["concurrent"] }
swc_core           = { version = "9.0.0", features = ["ecma_plugin_transform"] }
swc_ecma_ast       = "5.0.0"
swc_ecma_utils     = "6.0.0"
swc_ecma_visit     = "5.0.0"
swc_plugin_macro   = "1.0.0"
tracing            = { version = "0.1.40", features = ["release_max_level_off"] }
