cargo-features = ["edition2024"]

[package]
authors = ["hahazexia"]
description = "AST Transforms for import modularizer"
edition = "2024"
license = "Apache-2.0"
name = "modularize_imports"
version = "0.0.1"

[dependencies]
serde_json = "1.0.79"
convert_case = "0.5.0"
handlebars = "4.2.1"
once_cell = "1.13.0"
regex = "1.5"
serde = "1"
swc_atoms = "0.6.5"
swc_cached = "0.3.19"
swc_common = "0.33.19"
swc_ecma_ast = "0.112.5"
swc_ecma_visit = "0.98.6"

[dev-dependencies]
swc_ecma_parser = "0.143.9"
swc_ecma_transforms_testing = "0.140.15"
testing = "0.35.20"
