[package]

description = "AST Transforms for import modularizer"


name = "modularize_imports"

authors      = ["hahazexia"]
edition      = "2021"
license      = "Apache-2.0"
rust-version = "1.70"
version      = "0.70.0"
publish      = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
convert_case   = "0.6.0"
handlebars     = "5.1.2"
once_cell      = "1.19.0"
regex          = { version = "1.10.4", default-features = false }
serde          = "1.0.203"
serde_json = "1.0.134"
swc_atoms      = "3.0.0"
swc_cached     = "1.0.0"
swc_common     = "5.0.0"
swc_ecma_ast   = "5.0.0"
swc_ecma_visit = "5.0.0"

[dev-dependencies]
swc_ecma_parser             = "6.0.0"
swc_ecma_transforms_testing = "6.0.0"
testing                     = "5.0.0"
